# LeadForge

./: .cursorrules  .dockerignore  .env.example  LICENSE  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 51dd3ee341e2_crear_tablas_leads_companies_y_events.py
app/: config.py  database.py  main.py
app/api/: dependencies.py
app/api/v1/: health.py  leads.py  router.py
app/models/: base.py  lead.py
app/schemas/: lead.py
app/services/: cache.py  lead_service.py
app/services/enrichment/: base.py  providers.py  service.py
app/tasks/: celery_app.py  lead_tasks.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py
tests/api/: test_leads.py
